# specsmith-cli

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DISTRIBUTION_GUIDE.md  DISTRIBUTION_SETUP_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  calculator_app_spec.txt  pyproject.toml  test_improved_normalization.py  test_markdown.py  test_normalization.py  test_precommit.py
.github/workflows/: ci.yml  release.yml
Formula/: specsmith-cli.rb
examples/: basic_usage.py
scripts/: build_and_publish.py  generate_homebrew_formula.py
specifications/: cli.md
specsmith_cli/: __init__.py  api_client.py  chat.py  config.py  constants.py  errors.py  main.py  utils.py
tests/: __init__.py  test_api_client.py  test_chat.py  test_config.py  test_main.py  test_utils.py
