[tool.poetry]
name = "specsmith-cli"
version = "0.1.5"
description = "Official command line interface for SpecSmith - AI-powered code generation and documentation"
authors = ["SpecSmith Team <team@specsmith.ai>"]
readme = "README.md"
packages = [{include = "specsmith_cli"}]
license = "MIT"
homepage = "https://specsmith.ai"
repository = "https://github.com/specsmith-ai/specsmith-cli"
documentation = "https://github.com/specsmith-ai/specsmith-cli#readme"
keywords = ["cli", "ai", "chat", "code-generation", "specsmith", "assistant", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.0"
httpx = "^0.25.0"
rich = "^13.0.0"
pydantic = "^2.0.0"
prompt-toolkit = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
pre-commit = "^3.0.0"

[tool.poetry.scripts]
specsmith = "specsmith_cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Documentation" = "https://github.com/specsmith-ai/specsmith-cli#readme"
"Homepage" = "https://specsmith.ai"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
